vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'AWS CloudFormation template for VPC'
Resources:
  # VPC
  sambastenVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '172.16.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: sambastenVPC
  #Public Subnet in AZ1
  PublicSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref sambastenVPC
      CidrBlock: '172.16.1.0/24'   
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: PublicSubnet1A   
  
  #App Private Subnet in AZ1
  AppPrivateSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref sambastenVPC
      CidrBlock: '172.16.2.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
      - Key: Name
        Value: AppPrivateSubnet1A
    
  
  #DB Private Subnet in AZ1
  DBPrivateSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref sambastenVPC
      CidrBlock: '172.16.3.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
      - Key: Name
        Value: DBPrivateSubnet1A

  #Public Subnet in AZ2
  PublicSubnet2B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref sambastenVPC
      CidrBlock: '172.16.4.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: PublicSubnet2B

  #App Private Subnet in AZ2
  AppPrivateSubnet2B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref sambastenVPC
      CidrBlock: '172.16.5.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
      - Key: Name
        Value: AppPrivateSubnet2B

  #DB Private Subnet in AZ2q
  DBPrivateSubnet2B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref sambastenVPC
      CidrBlock: '172.16.6.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
      - Key: Name
        Value: DBPrivateSubnet2B

  #Internet Gateway
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags: 
      - Key: Name
        Value: VPC-IntGW

  #Attach GW to the VPC
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref sambastenVPC
      InternetGatewayId: !Ref InternetGateway

  #Public Route Table
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref sambastenVPC
      Tags:
      - Key: Name
        Value: PublicRouteTable

  #Public Route
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  
  #PublicSubnet1A Route Table Associations
  PublicSubnet1ARouteTableAssociations:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1A
      RouteTableId: !Ref PublicRouteTable

  #PublicSubnet2B Route Table Associations
  PublicSubnet2BRouteTableAssociations:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2B
      RouteTableId: !Ref PublicRouteTable

  #Bastion EC2
  BastionHost:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: 't2.micro'
      KeyName: sambasten-bastionkeypair
      ImageId: 'ami-08be4b1b8afa29958'
      SubnetId: !Ref PublicSubnet1A
      SecurityGroupIds:
        - !Ref BastionSecurityGroup
      Tags:
      - Key: Name
        Value: BastionHost
  
  #Bastion Security Group
  BastionSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Bastion Security Group'
      VpcId: !Ref sambastenVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '136.226.130.245/32'
          Description: 'Allow SSH from work laptop'
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '173.34.166.225/32'
          Description: 'Allow SSH from personal laptop'
